--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <div class="container">
         
         <div class="section-header">
-            <h2> هەواڵەکان</h2>
+            <h2>هەواڵی نوێ</h2>
         </div>
 <div class="news-card">
     <img src=https://resources.premierleague.pulselive.com/photo-resources/2026/01/23/0f6fa4bc-e521-4d01-b436-08819985c931/An-image-of-Pep-Guardiola-and-Arsenal-players.jpg?width=1440>
