--- a/index.html
+++ b/index.html
@@ -223,19 +223,19 @@ alt="news">
 
       <div class="match-card"> 
             <div class="team"> ئارسناڵ </div> 
-            <div class="score">0 - 0<span class="time">23:00 </span></div> 
+            <div class="score">3 - 2<span class="time">كۆتایی </span></div> 
             <div class="team"> كایرات ئالماتی </div> 
         </div>
     </div>
 </div>
         <div class="match-card">
             <div class="team">لیڤه‌رپوول‌</div>
-            <div class="score">0 - 0<span class="time">23:00</span></div>
+            <div class="score">6 - 0<span class="time">كۆتایی</span></div>
             <div class="team">قاراباخ‌</div>
         </div>
 <div class="match-card"> 
             <div class="team"> مانچێسته‌ر سیتی </div> 
-            <div class="score">0 - 0<span class="time">23:00 </span></div> 
+            <div class="score">2 - 0<span class="time">كۆتایی </span></div> 
             <div class="team">گاڵاتاسه‌رای </div> 
         </div>
     </div>
