--- a/index.html
+++ b/index.html
@@ -218,25 +218,25 @@ alt="news">
         </div>
 
         <div class="section-header">
-            <h2>یارییه‌كانی ئه‌مڕۆی پرێمه‌ر لیگ - خولی یانه‌ پاڵه‌وانه‌كانی ئه‌ورووپا</h2>
+            <h2>یارییه‌كانی ئه‌مڕۆی پرێمه‌رلیگ</h2>
         </div>
 
       <div class="match-card"> 
-            <div class="team"> ئارسناڵ </div> 
-            <div class="score">3 - 2<span class="time">كۆتایی </span></div> 
-            <div class="team"> كایرات ئالماتی </div> 
+            <div class="team"> هیچ یارییه‌ك نیه‌ </div> 
+            <div class="score">0 - 0<span class="time">كۆتایی </span></div> 
+            <div class="team"> هیچ یارییه‌ك نیه‌ </div> 
         </div>
     </div>
 </div>
         <div class="match-card">
-            <div class="team">لیڤه‌رپوول‌</div>
-            <div class="score">6 - 0<span class="time">كۆتایی</span></div>
-            <div class="team">قاراباخ‌</div>
+            <div class="team">هیچ یارییه‌ك نیه‌‌</div>
+            <div class="score">0 - 0<span class="time">كۆتایی</span></div>
+            <div class="team">هیچ یارییه‌ك نیه‌‌</div>
         </div>
 <div class="match-card"> 
-            <div class="team"> مانچێسته‌ر سیتی </div> 
-            <div class="score">2 - 0<span class="time">كۆتایی </span></div> 
-            <div class="team">گاڵاتاسه‌رای </div> 
+            <div class="team"> هیچ یارییه‌ك نیه‌ </div> 
+            <div class="score">0 - 0<span class="time">كۆتایی </span></div> 
+            <div class="team">هیچ یارییه‌ك نیه‌ </div> 
         </div>
     </div>
 
