--- a/index.html
+++ b/index.html
@@ -231,29 +231,29 @@
 
       <div class="match-card"> 
             <div class="team"> ئێڤه‌رتۆن </div> 
-            <div class="score">0 - 0<span class="18:00"> </span>18:00</div> 
+            <div class="score"><span class="18:00"> </span>18:00</div> 
             <div class="team"> برایتۆن‌ </div> 
         </div>
     </div>
 </div>
         <div class="match-card">
             <div class="team">ئارسناڵ‌‌</div>
-            <div class="score">0 - 0<span class="18:00"></span>18:00</div>
+            <div class="score"><span class="18:00"></span>18:00</div>
             <div class="team">لیدز‌‌</div>
         </div>
 <div class="match-card"> 
             <div class="team"> بۆرنمۆس‌ </div> 
-            <div class="score">0 - 0<span class="18:00"> </span>18:00</div> 
+            <div class="score"><span class="18:00"> </span>18:00</div> 
             <div class="team">ۆڵڤۆس‌ </div> 
         </div>
 <div class="match-card"> 
             <div class="team"> وێستهام </div> 
-            <div class="score">0 - 0<span class="20:30">  </span>20:30</div> 
+            <div class="score"><span class="20:30">  </span>20:30</div> 
             <div class="team"> چێڵسی </div> 
         </div>
 <div class="match-card"> 
             <div class="team"> نیوكاسڵ </div> 
-            <div class="score">0 - 0<span class="23:00">  </span>23:00</div> 
+            <div class="score"><span class="23:00">  </span>23:00</div> 
             <div class="team"> لیڤه‌رپوول </div> 
         </div>
     </div>
